--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no, user-scalable=no, minimum-scale=1.0, maximum-scale = 1.0" />
+    <meta name="description" content="The very best chat!" />
+    <title>Web chat</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Noto+Sans+Display&subset=cyrillic">
   </head>
   <body>
     <div id="root"></div>
